# PVTPackage

PVTPackage/: CMakeLists.txt
PVTPackage/source/: CMakeLists.txt
PVTPackage/source/MultiphaseSystem/: ComponentProperties.hpp  DebugComponentProperties.cpp  DebugComponentProperties.hpp  MultiphaseSystem.cpp  MultiphaseSystemProperties.hpp  PropertyAndDerivatives.hpp
PVTPackage/source/MultiphaseSystem/PhaseModel/BlackOil/: BlackOil_GasModel.hpp  BlackOil_OilModel.hpp  BlackOil_WaterModel.hpp  DeadOil_PhaseModel.hpp  PVTGdata.hpp  PVTOdata.hpp  PVTWdata.hpp
PVTPackage/source/MultiphaseSystem/PhaseModel/CubicEOS/: CubicEoSPhaseModel.hpp
PVTPackage/source/MultiphaseSystem/PhaseSplitModel/: CompositionalFlash.hpp  FreeWaterFlash.hpp
PVTPackage/source/refactor/: CMakeLists.txt  DebugComponentProperties.cpp  DebugComponentProperties.hpp  JsonKeys.cpp  JsonKeys.hpp  SerializersDeserializers.cpp  SerializersDeserializers.hpp  testFirst.cpp
PVTPackage/source/refactor/data/: pvt_data.txt
PVTPackage/source/refactor/deserializers/: ComponentProperties.cpp  ComponentProperties.hpp  Flash.cpp  Flash.hpp  MultiphaseSystemProperties.cpp  MultiphaseSystemProperties.hpp  PVTEnums.hpp  PhaseModels.cpp  PhaseModels.hpp  PhaseProperties.cpp  PhaseProperties.hpp  PropertyAndDerivatives.cpp  PropertyAndDerivatives.hpp
PVTPackage/source/refactor/passiveDataStructures/: ComponentProperties.hpp  Flash.hpp  MultiphaseSystemProperties.hpp  PVTEnums.hpp  PhaseModel.hpp  PhaseProperties.hpp  PropertyAndDerivatives.hpp
PVTPackage/source/refactor/serializers/: BlackOilModels.cpp  BlackOilModels.hpp  ComponentProperties.cpp  ComponentProperties.hpp  CubicEoSPhaseModel.cpp  CubicEoSPhaseModel.hpp  DeadOilPhaseModel.cpp  DeadOilPhaseModel.hpp  Enums.hpp  Flash.cpp  Flash.hpp  MultiphaseSystemProperties.cpp  MultiphaseSystemProperties.hpp  PVTEnums.hpp  PhaseModels.cpp  PhaseModels.hpp  PhaseProperties.cpp  PhaseProperties.hpp  PropertyAndDerivatives.cpp  PropertyAndDerivatives.hpp  SerializersDeserializers.hpp
